<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#777777"
    android:orientation="vertical"
    tools:context="com.example.abhishekarora.quizzer.MainActivity">

    <TextView
        android:id="@+id/algo"
        style="@style/CategoryStyle"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="#222222"
        android:textAlignment="center"
        android:text="@string/category_algo" />

    <TextView
        android:id="@+id/math"
        style="@style/CategoryStyle"
        android:layout_marginBottom="16dp"
        android:background="#222222"
        android:textAlignment="center"
        android:text="@string/category_math" />

    <TextView
        android:id="@+id/ds"
        style="@style/CategoryStyle"
        android:layout_marginBottom="16dp"
        android:background="#222222"
        android:textAlignment="center"
        android:text="@string/category_ds" />

    <TextView
        android:id="@+id/apti"
        style="@style/CategoryStyle"
        android:background="#222222"
        android:textAlignment="center"
        android:text="@string/category_apti" />

</LinearLayout>
